Spring Configuration with Java Code (no xml)

--- a/spring-demo-annotation/src/sport.properties
+++ b/spring-demo-annotation/src/sport.properties
@@ -1,2 +1,2 @@
-foo.email=myeasycoach@luv2code.com
-foo.team=Silly Java Coders
+foo.email = myeasycoach@luv2code.com
+foo.team = Awesome Java Coders
