--- a/web-customer-tracker/WebContent/WEB-INF/web.xml
+++ b/web-customer-tracker/WebContent/WEB-INF/web.xml
@@ -4,6 +4,7 @@
 
   <absolute-ordering />
 
+	<!-- look for these files in top-down fasion. -->
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>index.html</welcome-file>
