--- a/crud-demo/pom.xml
+++ b/crud-demo/pom.xml
@@ -1,20 +1,17 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<!-- 기본 컴파일러 버전(java 8), UTF-8 인코딩 등이 들어있다. -->
-		<!-- starter들의 버전을 따로 명시하지 않아도 parent의 버전으로 한 방에 해결된다. -->
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.2.RELEASE</version>
-		<relativePath /> <!-- lookup parent from repository -->
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.luv2code.springboot.demo</groupId>
-	<artifactId>mycoolapp</artifactId>
+	<groupId>com.luv2code.springboot</groupId>
+	<artifactId>crud-demo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>mycoolapp</name>
+	<name>crud-demo</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -22,21 +19,32 @@
 	</properties>
 
 	<dependencies>
-		<!-- collection of maven dependencies(spring-web, spring-webmvc, hibernate-validator, 
-			tomcat, json...) -->
-		<!-- makes sure you have compatible versions -->
 		<dependency>
+			<!-- hibernate ORM support -->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+		<dependency>
+			<!-- MVC and REST support -->
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<!-- automatically restarts your application when code is updated -->
 		<dependency>
+			<!-- automatic reloading -->
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
 		</dependency>
-		
 		<dependency>
+		 	<!-- MySQL JDBC Driver -->
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<!-- Unit testing support -->
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
@@ -52,7 +60,7 @@
 	<build>
 		<plugins>
 			<plugin>
-				<!-- to package executable jar or war archive -->
+				<!-- Spring Boot Maven Plugin(packaging and running) -->
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
